Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/BadAccess02.out
BadAccess02.java:21:52: compiler.err.cant.ref.non.effectively.final.var: j, (compiler.misc.lambda)
BadAccess02.java:29:56: compiler.err.cant.ref.non.effectively.final.var: j, (compiler.misc.lambda)
2 errors
